<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/ScrollView01"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true">


            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/texttop"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif-medium"
                    android:paddingStart="8dp"
                    android:text="@string/Question1"
                    android:textColor="@color/colorQ6"
                    android:textSize="12sp"/>

                <RadioGroup
                    android:id="@+id/radioGroup1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:textColor="@color/colorPrimary">

                    <RadioButton
                        android:id="@+id/asia"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/word1"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp"/>

                    <RadioButton
                        android:id="@+id/africa"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/word4"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp"/>

                    <RadioButton
                        android:id="@+id/america"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/word2"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp"/>

                    <RadioButton
                        android:id="@+id/europe"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/word3"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp"/>

                </RadioGroup>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif-medium"
                    android:paddingStart="8dp"
                    android:text="@string/Question2"
                    android:textColor="@color/colorQ6"
                    android:textSize="12sp"/>

                <RadioGroup
                    android:id="@+id/radioGroup2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:textColor="@color/colorPrimary">

                    <RadioButton
                        android:id="@+id/belfast"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/word5"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp"/>

                    <RadioButton
                        android:id="@+id/dublin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/word6"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp"/>

                    <RadioButton
                        android:id="@+id/london"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/word7"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp"/>

                    <RadioButton
                        android:id="@+id/glasgow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/word8"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp"/>


                </RadioGroup>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif-medium"
                    android:paddingLeft="8dp"
                    android:text="@string/Question3"
                    android:textColor="@color/colorQ6"
                    android:textSize="12sp"
                    />

                <RadioGroup
                    android:id="@+id/radioGroup3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/islam"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/word9"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp"/>

                    <RadioButton
                        android:id="@+id/buddist"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/word10"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp"/>

                    <RadioButton
                        android:id="@+id/hindu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/word11"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp"/>

                    <RadioButton
                        android:id="@+id/christianity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/word12"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp"/>


                </RadioGroup>
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="35dp"
                android:background="@android:color/darker_gray">

            </View>

            <LinearLayout

                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:fontFamily="sans-serif-medium"
                    android:paddingStart="10dp"
                    android:text="@string/Question4"
                    android:textColor="@color/colorQ6"
                    android:textSize="12sp"/>

                <RadioGroup
                    android:id="@+id/radioGroup4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/twenty"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/twenty"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp"/>

                    <RadioButton
                        android:id="@+id/ten"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ten"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp"/>

                    <RadioButton
                        android:id="@+id/six"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/six"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp"/>

                    <RadioButton
                        android:id="@+id/nine"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nine"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp"/>

                </RadioGroup>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:fontFamily="sans-serif-medium"
                    android:paddingLeft="8dp"
                    android:text="@string/Question5"
                    android:textColor="@color/colorQ6"
                    android:textSize="12sp"/>

                <CheckBox
                    android:id="@+id/coast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/coast"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp"/>

                <CheckBox
                    android:id="@+id/titanic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titanic"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp"/>

                <CheckBox
                    android:id="@+id/tower"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/london"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp"/>

                <CheckBox
                    android:id="@+id/mountain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mountain"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif-medium"
                    android:paddingLeft="8dp"
                    android:text="@string/Question6"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp"/>

                <EditText
                    android:id="@+id/square"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/answer"
                    android:inputType="number"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" >
                    </EditText>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="100dp"
            android:layout_marginTop="16dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginTop="10dp"
                android:onClick="myScore"
                android:text="@string/score"/>


        </LinearLayout>
    </RelativeLayout>


</ScrollView>







